--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos"></ul>
-        <li>Home</li>
+        <li>class="botao">Home</li>
         <li>Personagens</li>
         <li>Pesquisar</li>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
