--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <li>Pesquisar</li>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
+    <div class="texto">
+        <h2 class="subtitulo">Veja sobre a historia de cada uma delas</h2>
+    </div>
 </body>
 </html>
