--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </div>
     <div class="texto">
         <h2 class="subtitulo">Veja sobre a historia de cada uma delas</h2>
+        <p class="texto-incial">Nosso Site fala sobre a história de princesas que marcaram a infância de muitas crianças, transformando a imaginação fertil delas com as magias e contos utilizados, as histórias de princesa oferecem lições de coragem, resiliência e determinação que as meninas podem aprender e usar em suas próprias vidas quando enfrentam situações difíceis. Vamos ver como as princesas lidam com esses desafios e o que elas podem ensinar às crianças.
+            <p class="texto-fonte">Fonte: augustopessoa.com</p>
+        </p>
     </div>
 </body>
 </html>
