--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos"></ul>
-        <li>class="botao">Home</li>
-        <li>Personagens</li>
-        <li>Pesquisar</li>
+        <a href="#"><li>class="botao">Home</li></a>
+        <a href="galeria.html"><li> class="botao"galeria</li>
+        <li> explorar</li>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
     <div class="texto">
