--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class="topicos"></ul>
         <a href="#"><li>class="botao">Home</li></a>
         <a href="galeria.html"><li> class="botao"galeria</li>
-        <li> explorar</li>
+       <a href="explorar.html"><li class="botao">explorar</li></a>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
     <div class="texto">
