--- a/galeria.html
+++ b/galeria.html
@@ -21,7 +21,7 @@
     <div class="terceira-linha">
         <img class="foto" src="img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
         <img class="foto" src=""   alt=""
-        <img
+        <img class="foto" src=""
         <imh
     </div>
 </body>
