--- a/explorar.html
+++ b/explorar.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 class="titulo">Qual princesa você quer ser hoje?</h1>
+    <div class="primeira princesa">
+        <h2 class="subtitulo"></h2>
+    </div>
 </body>
 </html>
