--- a/explorar.html
+++ b/explorar.html
@@ -9,7 +9,9 @@
 <body>
     <h1 class="titulo">Qual princesa você quer ser hoje?</h1>
     <div class="primeira princesa">
-        <h2 class="subtitulo"></h2>
+        <h2 class="subtitulo">Cinderela</h2>
+        <img class="foto" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
+        <p class="texto">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não deixa sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil. Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
     </div>
 </body>
 </html>
