--- a/galeria.html
+++ b/galeria.html
@@ -20,9 +20,9 @@
     </div>
     <div class="terceira-linha">
         <img class="foto" src="img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
-        <img class="foto" src=""   alt=""
-        <img class="foto" src=""
-        <imh
+        <img class="foto" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg"   alt="princesinha sofia">
+        <img class="foto" src="img/frozen-cinepop.jpg" alt="frozen">
+        <img class="foto" src="img/images.jpeg" alt="branca de neve">
     </div>
 </body>
 </html>
