--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="texto">
         <h2 class="subtitulo">Veja sobre a história de cada uma delas</h2>
-        <p class="texto-incial">Nosso Site fala sobre a história de princesas que marcaram a infância de muitas crianças, transformando a imaginação fertil delas com as magias e contos utilizados, as histórias de princesa oferecem lições de coragem, resiliência e determinação que as meninas podem aprender e usar em suas próprias vidas quando enfrentam situações difíceis. Vamos ver como as princesas lidam com esses desafios e o que elas podem ensinar às crianças.
+        <p class="texto-incial">O Site fala sobre a história de princesas que marcaram a infância de muitas crianças, transformando a imaginação fertil delas com as magias e contos utilizados, as histórias de princesa oferecem lições de coragem, resiliência e determinação que as meninas podem aprender e usar em suas próprias vidas quando enfrentam situações difíceis. Vamos ver como as princesas lidam com esses desafios e o que elas podem ensinar às crianças.
             <p class="texto-fonte">Fonte: augustopessoa.com</p>
         </p>
     </div>
