--- a/explorar.html
+++ b/explorar.html
@@ -24,7 +24,7 @@
 <h2 class="subtitulo">luzes flutuantes rapunzel</h2>  
 <img class="foto" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
 <p class="texto">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
-<h2 class="subtitulo">mundo encantado</h2>
+<h2 class="subtitulo">rapunzel</h2>
 <img class="foto" src="./img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
 <p class="texto">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
 <h2 class="subtitulo">princesinha sofia</h2>
