--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="cabecalho">
-        <ul class="topicos"></ul>
-        <a href="#"><li> class="botao">Home</li></a>
-        <a href="galeria.html"><li> class="botao"galeria</li>
-       <a href="explorar.html"><li class="botao">explorar</li></a>
+        <ul class="topicos">
+<li class="botao"><a href="#">Home</a></li>
+<li class="botao"><a href="galeria.html">Galeria</a></li>
+        </ul>
+        
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
     <div class="texto">
