--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <ul class="topicos">
 <li class="botao"><a href="#">Home</a></li>
 <li class="botao"><a href="galeria.html">Galeria</a></li>
-        </ul>
-        
+<li class="botao"><a href="explorar.html">Explorar</a></li>
+     </ul>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
     <div class="texto">
