--- a/explorar.html
+++ b/explorar.html
@@ -11,32 +11,32 @@
     <h2 class="subtitulo">Cinderela</h2>
    
     <div class="primeira princesa"> 
-        <img class="foto" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
-        <p class="texto">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não deixa sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
+        <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
+        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não deixa sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
    <h2 class="subtitulo">moana</h2>
-        <img class="foto" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
-        <p class="texto">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
+        <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
+        <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
   <h2 class="subtitulo">bela adormecida</h2>
-        <img class="foto" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
-        <p class="texto">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável. Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
+        <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
+        <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável. Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
   <h2 class="subtitulo">A bela e a fera</h2>
-  <img class="foto" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
-  <p class="texto">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
+  <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
+  <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
 <h2 class="subtitulo">luzes flutuantes rapunzel</h2>  
-<img class="foto" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
-<p class="texto">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
+<img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
+<p class="texto-descricao">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
 <h2 class="subtitulo">rapunzel</h2>
-<img class="foto" src="./img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
-<p class="texto">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
+<img class="foto-explorar" src="./img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
+<p class="texto-descricao">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
 <h2 class="subtitulo">princesinha sofia</h2>
-<img class="foto" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg" alt="princesinha sofia">
-<p class="texto">Sofia era uma camponesa normal, até que sua mãe se casa com o Rei do Reino e de repente ela se torna da realeza. Sofia descobre que olhar como uma princesa não é tão difícil, mas se comportar como uma deve vir do coração.
+<img class="foto-explorar" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg" alt="princesinha sofia">
+<p class="texto-descricao">Sofia era uma camponesa normal, até que sua mãe se casa com o Rei do Reino e de repente ela se torna da realeza. Sofia descobre que olhar como uma princesa não é tão difícil, mas se comportar como uma deve vir do coração.
  <h2 class="subtitulo">frozen</h2>
- <img class="foto" src="img/frozen-cinepop.jpg" alt="frozen">
- <p class="texto">Frozen. Elsa, princesa de Arendelle e herdeira do trono, nasce com a capacidade de criar e controlar o gelo e a neve. Quando criança, ela usa suas habilidades para criar um paraíso de inverno para brincar com sua irmã mais nova e melhor amiga, a princesa Anna.</p>
+ <img class="foto-explorar" src="img/frozen-cinepop.jpg" alt="frozen">
+ <p class="texto-descricao">Frozen. Elsa, princesa de Arendelle e herdeira do trono, nasce com a capacidade de criar e controlar o gelo e a neve. Quando criança, ela usa suas habilidades para criar um paraíso de inverno para brincar com sua irmã mais nova e melhor amiga, a princesa Anna.</p>
  <h2 class="subtitulo">branca de neve</h2>
- <img class="foto" src="img/images.jpeg" alt="branca de neve">
- <p class="texto">Branca de Neve é uma jovem de 14 anos, extremamente bonita, que causa inveja na Rainha pela sua beleza única e também por sua formosura. Com "lábios vermelhos como sangue, cabelo negro como ébano e pele branca como a neve". Ela tem um corpo esbelto e pés delicados.</p>
+ <img class="foto-explorar" src="img/images.jpeg" alt="branca de neve">
+ <p class="texto-descricao">Branca de Neve é uma jovem de 14 anos, extremamente bonita, que causa inveja na Rainha pela sua beleza única e também por sua formosura. Com "lábios vermelhos como sangue, cabelo negro como ébano e pele branca como a neve". Ela tem um corpo esbelto e pés delicados.</p>
 </div>
 </body>
 </html>
