--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos">
-<li class="botao"><a href="#">Home</a></li>
-<li class="botao"><a href="galeria.html">Galeria</a></li>
-<li class="botao"><a href="explorar.html">Explorar</a></li>
+<li class="botao"><a href="#"class="botao-link">Home</a></li>
+<li class="botao"><a href="galeria.html" class="botao-link">Galeria</a></li>
+<li class="botao"><a href="explorar.html" class="botao-link">Explorar</a></li>
      </ul>
     <h1 class="titulo" >Conheça um pouco das Princesas</h1>
     </div>
