--- a/explorar.html
+++ b/explorar.html
@@ -12,13 +12,13 @@
    
     <div class="primeira princesa"> 
         <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
-        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não deixa sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
+        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não</br> sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
    <h2 class="subtitulo">moana</h2>
         <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
-        <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
+        <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma</br> longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
   <h2 class="subtitulo">bela adormecida</h2>
         <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
-        <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável. Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
+        <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
   <h2 class="subtitulo">A bela e a fera</h2>
   <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
   <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
