--- a/explorar.html
+++ b/explorar.html
@@ -12,8 +12,7 @@
    
     <div class="primeira princesa"> 
         <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
-        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não</br> sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>Ela é extremamente madura e mostra que pode superar seus obstáculos sem a ajuda de magia.</p>
-   <h2 class="subtitulo">moana</h2>
+        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>
         <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
         <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma</br> longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
   <h2 class="subtitulo">bela adormecida</h2>
