--- a/explorar.html
+++ b/explorar.html
@@ -10,12 +10,15 @@
     <h1 class="titulo">Qual princesa você quer ser hoje?</h1>
     <h2 class="subtitulo">Cinderela</h2>
    
-    <div class="primeira princesa"> 
+    <div class="destino"> 
         <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
-        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br>
-        <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
+        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br></p>
+    </div>
+    <div class="destino">       
+    <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
         <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma </br>tribo na Oceania, vinda de uma longa linhagem </br>de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
   <h2 class="subtitulo">bela adormecida</h2>
+    </div>
         <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
         <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
   <h2 class="subtitulo">A bela e a fera</h2>
