--- a/explorar.html
+++ b/explorar.html
@@ -14,17 +14,20 @@
         <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
         <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br></p>
     </div>
+    <h2 class="subtitulo">Bela Adormecida</h2>
     <div class="destino">       
     <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
         <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma </br>tribo na Oceania, vinda de uma longa linhagem </br>de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
-  <h2 class="subtitulo">bela adormecida</h2>
     </div>
         <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
         <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
-  <h2 class="subtitulo">A bela e a fera</h2>
+        <h2 class="subtitulo">A bela e a fera</h2>
+        <div class="destino">
   <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
   <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
-<h2 class="subtitulo">luzes flutuantes rapunzel</h2>  
+        </div>
+  <h2 class="subtitulo">luzes flutuantes rapunzel</h2> 
+  <div class="destino">
 <img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
 <p class="texto-descricao">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
 <h2 class="subtitulo">rapunzel</h2>
