--- a/explorar.html
+++ b/explorar.html
@@ -30,18 +30,27 @@
   <div class="destino">
 <img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
 <p class="texto-descricao">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
+</div>
 <h2 class="subtitulo">rapunzel</h2>
+<div class="destino">
 <img class="foto-explorar" src="./img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
 <p class="texto-descricao">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
+</div>
 <h2 class="subtitulo">princesinha sofia</h2>
+<div class="destino">
 <img class="foto-explorar" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg" alt="princesinha sofia">
-<p class="texto-descricao">Sofia era uma camponesa normal, até que sua mãe se casa com o Rei do Reino e de repente ela se torna da realeza. Sofia descobre que olhar como uma princesa não é tão difícil, mas se comportar como uma deve vir do coração.
+<p class="texto-descricao">Sofia era uma camponesa normal, até que sua mãe se casa com o Rei do Reino e de repente ela se torna da realeza. Sofia descobre que olhar como uma princesa não é tão difícil, mas se comportar como uma deve vir do coração.</p>
+</div>
  <h2 class="subtitulo">frozen</h2>
+ <div class="destino">
  <img class="foto-explorar" src="img/frozen-cinepop.jpg" alt="frozen">
  <p class="texto-descricao">Frozen. Elsa, princesa de Arendelle e herdeira do trono, nasce com a capacidade de criar e controlar o gelo e a neve. Quando criança, ela usa suas habilidades para criar um paraíso de inverno para brincar com sua irmã mais nova e melhor amiga, a princesa Anna.</p>
+ </div>
  <h2 class="subtitulo">branca de neve</h2>
+ <div class="destino">
  <img class="foto-explorar" src="img/images.jpeg" alt="branca de neve">
  <p class="texto-descricao">Branca de Neve é uma jovem de 14 anos, extremamente bonita, que causa inveja na Rainha pela sua beleza única e também por sua formosura. Com "lábios vermelhos como sangue, cabelo negro como ébano e pele branca como a neve". Ela tem um corpo esbelto e pés delicados.</p>
+ </div>
 </div>
 </body>
 </html>
