--- a/explorar.html
+++ b/explorar.html
@@ -19,8 +19,11 @@
     <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
         <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma </br>tribo na Oceania, vinda de uma longa linhagem </br>de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
     </div>
+    <h2 class="subtitulo">Aurora</h2>
+    <div class="destino">
         <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
         <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
+</div>
         <h2 class="subtitulo">A bela e a fera</h2>
         <div class="destino">
   <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
