--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
             <p class="texto-fonte">Fonte: augustopessoa.com</p>
         </p>
     </div>
+ <div class="destino">
+ <img class="foto-explorar" src="img/png-transparent-disney-princesses-illustration-disney-princess-princesas-princess-kida-kidagakash-princess-aurora-minnie-mouse-disney-princess-disney-princess-princesas-kida-thumbnail.png" alt="todas princesas">
+ </div>
 </body>
 </html>
