--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
     </div>
  <div class="destino">
- <img class="foto-explorar" src="img/png-transparent-disney-princesses-illustration-disney-princess-princesas-princess-kida-kidagakash-princess-aurora-minnie-mouse-disney-princess-disney-princess-princesas-kida-thumbnail.png" alt="todas princesas">
+ <img class="foto-explorar" src="img/images copy.jpeg" alt="todas princesas">
  </div>
 </body>
 </html>
