--- a/explorar.html
+++ b/explorar.html
@@ -11,7 +11,7 @@
     <h2 class="subtitulo">Cinderela</h2>
    
     <div class="destino"> 
-        <img class="foto-explorar" src="./img/A_Christmas_Fantasy_Parade_(35661826025).jpg" alt="cinderela">
+        <img class="foto-explorar" src="img/images copy 2.jpeg" alt="cinderela">
         <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br></p>
     </div>
     <h2 class="subtitulo">Moana</h2>
