--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
         <img class="foto" src="img/8637335969_63e0c405b1_o.jpg" alt="princesa aurora">
     </div> 
     <div class="segunda-linha">
-        <img class="foto" src="img/images copy 2.jpeg">princesa cinderela">
+        <img class="foto" src="img/images copy 2.jpeg" alt="princesa cinderela">
         <img class="foto" src="img/beautiful-963893_1280.jpg" alt="bela e a fera">
         <img class="foto" src="img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="lanternas flutuantes">
     </div>
