--- a/explorar.html
+++ b/explorar.html
@@ -21,7 +21,7 @@
     </div>
     <h2 class="subtitulo">Aurora</h2>
     <div class="destino">
-        <img class="foto-explorar" src="./img/8637335969_63e0c405b1_o.jpg" alt="bela adormecida">
+        <img class="foto-explorar" src="./img/images (1).jpeg" alt="bela adormecida">
         <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
 </div>
         <h2 class="subtitulo">A Bela</h2>
