--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
     <div class="primeira-linha">
         <img class="foto" src="img/images.jpeg" alt="branca de neve">
         <img class="foto" src="img/29721606381_c76420de12_o.jpg" alt="princesa moana">
-        <img class="foto" src="img/8637335969_63e0c405b1_o.jpg" alt="princesa aurora">
+        <img class="foto" src="img/images (1).jpeg" alt="princesa aurora">
     </div> 
     <div class="segunda-linha">
         <img class="foto" src="img/images copy 2.jpeg" alt="princesa cinderela">
