--- a/explorar.html
+++ b/explorar.html
@@ -36,7 +36,7 @@
 </div>
 <h2 class="subtitulo">Rapunzel</h2>
 <div class="destino">
-<img class="foto-explorar" src="./img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
+<img class="foto-explorar" src="./img/Profile_-_Rapunzel.jpg" alt="rapunzel">
 <p class="texto-descricao">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
 </div>
 <h2 class="subtitulo">princesinha sofia</h2>
