--- a/galeria.html
+++ b/galeria.html
@@ -19,7 +19,7 @@
         <img class="foto" src="img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="lanternas flutuantes">
     </div>
     <div class="terceira-linha">
-        <img class="foto" src="img/king-lip-h2z-BKEUR8s-unsplash.jpg" alt="rapunzel">
+        <img class="foto" src="img/Profile_-_Rapunzel.jpg" alt="rapunzel">
         <img class="foto" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg"   alt="princesinha sofia">
         <img class="foto" src="img/frozen-cinepop.jpg" alt="frozen">
     </div>
