--- a/explorar.html
+++ b/explorar.html
@@ -26,25 +26,25 @@
 </div>
         <h2 class="subtitulo">A Bela</h2>
         <div class="destino">
-  <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="bela e a fera">
+  <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="Bela e a Fera">
   <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
         </div>
-  <h2 class="subtitulo">Luzes flutuantes rapunzel</h2> 
+  <h2 class="subtitulo">Luzes Flutuantes rRpunzel</h2> 
   <div class="destino">
-<img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="luzes flutuantes">
+<img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="Luzes Flutuantes ">
 <p class="texto-descricao">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
 </div>
 <h2 class="subtitulo">Rapunzel</h2>
 <div class="destino">
-<img class="foto-explorar" src="./img/Profile_-_Rapunzel.jpg" alt="rapunzel">
+<img class="foto-explorar" src="./img/Profile_-_Rapunzel.jpg" alt="Rapunzel">
 <p class="texto-descricao">Rapunzel é uma menina de 18 anos que é conhecida por seus cabelos dourados, que chegam a medir 21 metros de comprimento. Ela é magra, tem grandes olhos verdes, um sorriso brincalhão, e sardas. Rapunzel é vista na maioria das vezes, com seu vestido roxo, com espartilho e mangas rosas.</p>
 </div>
-<h2 class="subtitulo">princesinha sofia</h2>
+<h2 class="subtitulor"> Princesinha sofia</h2>
 <div class="destino">
 <img class="foto-explorar" src="img/princess-sofia-with-whatnaught-and-clover-b4lsa9v66e27fr0h.jpg" alt="princesinha sofia">
 <p class="texto-descricao">Sofia era uma camponesa normal, até que sua mãe se casa com o Rei do Reino e de repente ela se torna da realeza. Sofia descobre que olhar como uma princesa não é tão difícil, mas se comportar como uma deve vir do coração.</p>
 </div>
- <h2 class="subtitulo">frozen</h2>
+ <h2 class="subtitulo">Frozen</h2>
  <div class="destino">
  <img class="foto-explorar" src="img/frozen-cinepop.jpg" alt="frozen">
  <p class="texto-descricao">Frozen. Elsa, princesa de Arendelle e herdeira do trono, nasce com a capacidade de criar e controlar o gelo e a neve. Quando criança, ela usa suas habilidades para criar um paraíso de inverno para brincar com sua irmã mais nova e melhor amiga, a princesa Anna.</p>
