--- a/explorar.html
+++ b/explorar.html
@@ -49,7 +49,7 @@
  <img class="foto-explorar" src="img/frozen-cinepop.jpg" alt="frozen">
  <p class="texto-descricao">Frozen. Elsa, princesa de Arendelle e herdeira do trono, nasce com a capacidade de criar e controlar o gelo e a neve. Quando criança, ela usa suas habilidades para criar um paraíso de inverno para brincar com sua irmã mais nova e melhor amiga, a princesa Anna.</p>
  </div>
- <h2 class="subtitulo">branca de neve</h2>
+ <h2 class="subtitulo">Branca de Neve</h2>
  <div class="destino">
  <img class="foto-explorar" src="img/images.jpeg" alt="branca de neve">
  <p class="texto-descricao">Branca de Neve é uma jovem de 14 anos, extremamente bonita, que causa inveja na Rainha pela sua beleza única e também por sua formosura. Com "lábios vermelhos como sangue, cabelo negro como ébano e pele branca como a neve". Ela tem um corpo esbelto e pés delicados.</p>
