--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
     </div>
  <div class="destino">
- <img class="foto-explorar" src="img/images copy 2.jpeg" alt="todas princesas">
+ <img class="foto-explorar" src="img/images (3).jpeg" alt="todas princesas">
  </div>
 </body>
 </html>
