--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
  <div class="destino">
  <img class="foto-explorar" src="img/images (3).jpeg" alt="todas princesas">
+ <img class="foto-explorar" src="img/images (4).jpeg" alt="todas princesa">
  </div>
 </body>
 </html>
