--- a/explorar.html
+++ b/explorar.html
@@ -29,7 +29,7 @@
   <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="Bela e a Fera">
   <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
         </div>
-  <h2 class="subtitulo">Luzes Flutuantes rRpunzel</h2> 
+  <h2 class="subtitulo">Luzes Flutuantes Rapunzel</h2> 
   <div class="destino">
 <img class="foto-explorar" src="./img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="Luzes Flutuantes ">
 <p class="texto-descricao">As luzes flutuantes são um dos elementos mais icônicos de Enrolados (Tangled). No filme, essas luzes são lanternas que o reino solta no céu a cada aniversário da princesa Rapunzel, na esperança de que ela volte para casa. </p>
