--- a/explorar.html
+++ b/explorar.html
@@ -26,7 +26,7 @@
 </div>
         <h2 class="subtitulo">A Bela</h2>
         <div class="destino">
-  <img class="foto-explorar" src="./img/beautiful-963893_1280.jpg" alt="Bela e a Fera">
+  <img class="foto-explorar" src="./img/images (1) copy.jpeg" alt="Bela e a Fera">
   <p class="texto-descricao">Moradora de uma pequena aldeia francesa, Bela tem o pai capturado pela Fera e decide entregar sua vida ao estranho ser em troca da liberdade do progenitor. No castelo ela conhece objetos mágicos e descobre que a Fera é na verdade um príncipe que precisa de amor para voltar à forma humana.</p>
         </div>
   <h2 class="subtitulo">Luzes Flutuantes Rapunzel</h2> 
