--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
     </div> 
     <div class="segunda-linha">
         <img class="foto" src="img/images copy 2.jpeg" alt="princesa cinderela">
-        <img class="foto" src="img/beautiful-963893_1280.jpg" alt="bela e a fera">
+        <img class="foto" src="img/images (1) copy.jpeg" alt="bela e a fera">
         <img class="foto" src="img/izabela-himes-t2C5Qg8H9Sw-unsplash copy.jpg" alt="lanternas flutuantes">
     </div>
     <div class="terceira-linha">
