--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </p>
     </div>
  <div class="destino">
- <img class="foto-explorar" src="img/images (3).jpeg" alt="todas princesas">
- <img class="foto-explorar" src="img/images (4).jpeg" alt="todas princesa">
+ <img class="foto-explorar" src="img/58887cc4bc2fc2ef3a186074 (1).png" alt="todas princesa">
  </div>
 </body>
 </html>
