--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h2 class="subtitulo">Veja sobre a história de cada uma delas</h2>
         <p class="texto-incial">O Site fala sobre a história de princesas que marcaram a infância de muitas crianças, transformando a imaginação fertil delas com as magias e contos utilizados, as histórias de princesa oferecem lições de coragem, resiliência e determinação que as meninas podem aprender e usar em suas próprias vidas quando enfrentam situações difíceis. Para ser considerada uma princesa da Disney, é preciso atender a alguns requisitos, como: Ser da realeza por nascimento ou por casamento, Não ser muito nova, Fazer sucesso, Vestir roupas adequadas, Ter executado atos de heroísmo. As histórias das Princesas Disney oferecem lições de coragem, resiliência e determinação que as meninas podem aprender e usar em suas próprias vidas quando enfrentam situações difíceis. Vamos ver como as princesas lidam com esses desafios e o que elas podem ensinar às crianças.
             <p class="texto-fonte">Fonte: augustopessoa.com</p>
+        <p class="pontos importantes">1. A princesa mais jovem é a Branca de Neve, ela tem apenas 14 anos.</br>
+            2. Elsa, de “Frozen“, é a mais velha das princesas, com 21 anos.</br>3. Com exceção da Cinderela, que foi forçada a trabalhar pela madrasta, Tiana é a única princesa que trabalha.</br>
+            4. Branca de Neve tem uma estrela na Calçada da Fama em Hollywood</br>5. O cabelo da Rapunzel possui 21 metros de comprimento.</br>
+            6. Rapunzel e Branca de Neve são da Baviera, na Alemanha.</br>
+            7.Aurora é a mais calada das princesas, só tem 18 linhas de diálogo e só aparece por 18 minutos no filme “A Bela Adormecida”.</br>
+            8. Bela, de “A Bela e a Fera” é a única personagem de toda sua aldeia que veste a cor azul.</br>9. Os sapatos de Cinderela medem 4,5 na numeração americana, número correspondente ao 33 aqui no Brasil.</br>
+            10. A cena em que o vestido de serviçal de Cinderela é transformado em um lindíssimo traje de festa era a favorita de Walt Disney.</br>
+           11. Em “A Bela Adormecida”, a cena da briga para decidir a cor do vestido da princesa foi inspirada em uma discussão real entre os animadores que não conseguiam entrar em um acordo sobre a cor da peça.</p>
         </p>
     </div>
  <div class="destino">
