--- a/explorar.html
+++ b/explorar.html
@@ -12,17 +12,17 @@
    
     <div class="destino"> 
         <img class="foto-explorar" src="img/images copy 2.jpeg" alt="cinderela">
-        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente</br> bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br></p>
+        <p class="texto-descricao">Cinderela é uma garota forte e independente , que é verdadeiramente bela porque ela não sua raiva e tristeza tirar o melhor da vida. Ela não é ingênua ou infantil.</br></p>
     </div>
     <h2 class="subtitulo">Moana</h2>
     <div class="destino">       
     <img class="foto-explorar" src="./img/29721606381_c76420de12_o.jpg" alt="moana">
-        <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma </br>tribo na Oceania, vinda de uma longa linhagem </br>de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
+        <p class="texto-descricao">Moana Waialiki é uma corajosa jovem, filha do chefe de uma tribo na Oceania, vinda de uma longa linhagem de navegadores. Querendo descobrir mais sobre seu passado e ajudar a família, ela resolve partir em busca de seus ancestrais, habitantes de uma ilha mítica que ninguém sabe onde é.</p>
     </div>
     <h2 class="subtitulo">Aurora</h2>
     <div class="destino">
         <img class="foto-explorar" src="./img/images (1).jpeg" alt="bela adormecida">
-        <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável.</br>Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
+        <p class="texto-descricao">Aurora é frequentemente descrita como tímida e sofisticada, bem como uma romântica incurável. Ela é bastante ingênua e insegura, como resultado de ter sido protegida na maior parte de sua vida, não podendo se comunicar com nenhuma pessoa além de suas madrinhas quando vivia como camponesa.</p>
 </div>
         <h2 class="subtitulo">A Bela</h2>
         <div class="destino">
